Set version to 0.1.0

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.fumbbl</groupId>
 	<artifactId>ffb-proxy</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<packaging>war</packaging>
 	<name>ffb-proxy</name>
 	<description>Proxy for Fumbbl&apos;s FFB</description>
